# CS3203-StaticProgramAnalyzer

./: .gitignore  README.md
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/spa/src/: TNode.h
Team00/Code00/src/spa/src/component/PKB/: PKB.cpp  PKB.h
Team00/Code00/src/spa/src/component/QueryProcessor/: EvaluateSuchThatDoubleSynonyms.cpp  EvaluateSuchThatDoubleSynonyms.h  EvaluateSuchThatSingleSynonym.cpp  QueryEvaluator.cpp  QueryEvaluator.h  QueryExtractor.cpp  QueryExtractor.h  QueryPKB.cpp  QueryProjector.cpp  QueryProjector.h  QuerySystemController.cpp
Team00/Code00/src/spa/src/component/QueryProcessor/QueryEvaluator/: EvaluateSuchThatNoSynonym.cpp  EvaluateSuchThatNoSynonym.h  EvaluateSuchThatSingleSynonym.cpp  EvaluateSuchThatSingleSynonym.h  QueryEvaluator.cpp  QueryPKB.cpp  QueryPKB.h
Team00/Code00/src/spa/src/component/QueryProcessor/QueryExtractor/: QueryExtractor.cpp  QueryExtractor.h  QueryParser.cpp  QueryParser.h  QueryTokenizer.cpp  QueryTokenizer.h
Team00/Code00/src/spa/src/component/QueryProcessor/types/: QueryEvaluatorTable.cpp  QueryEvaluatorTable.h  Types.cpp  Types.h
Team00/Code00/src/spa/src/component/SourceProcessor/: ConcreteSyntaxValidator.cpp  ConcreteSyntaxValidator.h  DesignExtractor.cpp  DesignExtractor.h  EntityFactory.cpp  EntityFactory.h  PSubsystem.cpp  PSubsystem.h  Parser.cpp  Parser.h  SourceProcessor.cpp  SourceProcessor.h  SyntaxValidator.cpp  SyntaxValidator.h  Tokenizer.cpp  Tokenizer.h
Team00/Code00/src/spa/src/datatype/: AssignmentExpression.cpp  AssignmentExpression.h  ConditionalExpression.cpp  ConditionalExpression.h  DataType.cpp  DataType.h  Deliverable.cpp  Deliverable.h  RegexPatterns.cpp  RegexPatterns.h
Team00/Code00/src/spa/src/model/: Entity.cpp  Entity.h  Statement.cpp  Statement.h
Team00/Code00/src/unit_testing/: CMakeLists.txt
Team00/Code00/src/unit_testing/src/: TestAST.cpp  main.cpp
Team00/Code00/src/unit_testing/src/component/PKB/: PKB.cpp  PKB.h  TestPKB.cpp
Team00/Code00/src/unit_testing/src/component/QueryProcessor/: TestQueryEvaluator.cpp  TestQueryProjector.cpp
Team00/Code00/src/unit_testing/src/component/QueryProcessor/QueryEvaluator/: TestQueryEvaluator.cpp
Team00/Code00/src/unit_testing/src/component/QueryProcessor/QueryExtractor/: TestQueryExtractor.cpp
Team00/Code00/src/unit_testing/src/component/QueryProcessor/types/: TestQueryEvaluatorTable.cpp
Team00/Code00/src/unit_testing/src/component/SourceProcessor/: EntityFactoryTest.cpp  TestDesignExtractor.cpp  TestEntityFactory.cpp  TestSyntaxValidator.cpp  TestTokenizer.cpp
Team00/Code00/src/unit_testing/src/datatype/: TestAssignmentExpression.cpp  TestDataType.cpp  TestDeliverable.cpp
Team00/Code00/src/unit_testing/utils/: EntityUtils.h  TestUtils.h
Team35/Code35/src/integration_testing/: CMakeLists.txt
Team35/Code35/src/integration_testing/src/: TestFrontEnd.cpp
Team35/Code35/src/integration_testing/src/components/: TestBackendBips.cpp  TestPKBToPQL.cpp  TestSourceProcToPKB.cpp
Team35/Code35/src/integration_testing/util/: TestUtil.cpp  TestUtil.h
Team35/Code35/src/spa/: CMakeLists.txt
Team35/Code35/src/spa/src/: TNode.h
Team35/Code35/src/spa/src/component/PKB/: AffectsExtractor.cpp  AffectsExtractor.h  AffectsTExtractor.cpp  AffectsTExtractor.h  DBManager.cpp  DBManager.h  NextTExtractor.cpp  NextTExtractor.h  PKB.cpp  PKB.h  RuntimeExtractor.cpp  RuntimeExtractor.h
Team35/Code35/src/spa/src/component/PKB/extractor/: AffectsBipExtractor.cpp  AffectsBipExtractor.h  AffectsBipTExtractor.cpp  AffectsBipTExtractor.h  AffectsExtractor.cpp  AffectsExtractor.h  AffectsTExtractor.cpp  AffectsTExtractor.h  NextBipExtractor.cpp  NextBipExtractor.h  NextBipTExtractor.cpp  NextBipTExtractor.h  NextTExtractor.cpp  NextTExtractor.h  RuntimeColleague.h  RuntimeExtractor.cpp  RuntimeExtractor.h  RuntimeMediator.h
Team35/Code35/src/spa/src/component/QueryProcessor/: QueryProjector.cpp  QueryProjector.h  QuerySystemController.cpp  QuerySystemController.h
Team35/Code35/src/spa/src/component/QueryProcessor/QueryEvaluator/: ClauseCommand.cpp  ClauseCommand.h  ClauseCommandExecutor.cpp  ClauseCommandExecutor.h  ClauseCommandInvoker.cpp  ClauseCommandInvoker.h  ClauseStrategy.cpp  (+21 more)
Team35/Code35/src/spa/src/component/SourceProcessor/: DesignExtractor.cpp  DesignExtractor.h  EntityFactory.cpp  EntityFactory.h  PSubsystem.cpp  PSubsystem.h  Parser.cpp  Parser.h  SourceProcessor.cpp  SourceProcessor.h  SyntaxValidator.cpp  SyntaxValidator.h  Tokenizer.cpp  Tokenizer.h
Team35/Code35/src/spa/src/datatype/: AssignmentExpression.cpp  AssignmentExpression.h  ConditionalExpression.cpp  ConditionalExpression.h  DataType.cpp  DataType.h  Deliverable.cpp  Deliverable.h  Identifier.h  RegexPatterns.cpp  RegexPatterns.h
Team35/Code35/src/spa/src/exception/: IterationOneException.h  SpaException.h  SyntaxException.h
Team35/Code35/src/spa/src/model/: CFG.cpp  CFG.h  Entity.cpp  Entity.h  Statement.cpp  Statement.h
Team35/Code35/src/spa/src/util/: Logger.cpp  Logger.h  PKBStub.cpp  PKBStub.h  RegexPatterns.cpp  RegexPatterns.h  TimeUtil.cpp  TimeUtil.h  Utility.cpp  Utility.h  util.h
Team35/Code35/src/unit_testing/: CMakeLists.txt
Team35/Code35/src/unit_testing/src/: TestAST.cpp  main.cpp
Team35/Code35/src/unit_testing/src/component/PKB/: TestAffectsBy.cpp  TestAffectsExtractor.cpp  TestAffectsTExtractor.cpp  TestNextTExtractor.cpp  TestPKB.cpp
Team35/Code35/src/unit_testing/src/component/QueryProcessor/: TestQueryProjector.cpp
Team35/Code35/src/unit_testing/src/component/SourceProcessor/: TestEntityFactory.cpp  TestParser.cpp  TestPsubsystem.cpp  TestSyntaxValidator.cpp  TestTokenizer.cpp
Team35/Code35/src/unit_testing/src/datatype/: TestAssignmentExpression.cpp  TestConditionalExpression.cpp  TestDataType.cpp  TestDeliverable.cpp
Team35/Code35/src/unit_testing/src/model/: TestCFG.cpp  TestEntity.cpp  TestStatement.cpp  TestVariableMapping.cpp
Team35/Code35/src/unit_testing/src/util/: TestCommonUtils.cpp  TestTimeUtil.cpp
Team35/Code35/src/unit_testing/utils/: EntityUtils.h  PKBStub.cpp  TestUtils.cpp  TestUtils.h
(+286 files in other folders)
